Envio de mensages para todos e correção no recebimento das mensagens

--- a/style/style.css
+++ b/style/style.css
@@ -77,6 +77,10 @@ footer ion-icon {
   font-size: 30px;
 }
 
+footer ion-icon:hover{
+  cursor: pointer;
+}
+
 .sentType{
   color: #717171;
   font-weight: 300;
