--- a/style/style.css
+++ b/style/style.css
@@ -137,3 +137,53 @@ main div{
   font-weight: 400;
 }
 
+aside{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: sticky;
+  z-index: 2;
+}
+
+aside ion-icon{
+  font-size: 20px;
+}
+
+.transparent{
+  width: 116px;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.users-visibility{
+  width: 100%;
+  height: 100vh;
+  background-color: #FFFFFF;
+  color: #000000;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  padding: 20px;
+}
+
+.users-visibility .title{
+  font-weight: 700;
+  height: 60px;
+  margin-top: 30px;
+}
+
+.user-list div, .user-visibility div{
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.user-list div ion-icon:first-child, .user-visibility div ion-icon:first-child{
+  margin-right: 10px;
+}
+
+.user-list div ion-icon:last-child, .user-visibility div ion-icon:last-child{
+  color: #28BB25;
+  position: absolute;
+  right: 4%;
+}
