--- a/style/style.css
+++ b/style/style.css
@@ -46,6 +46,10 @@ header ion-icon {
   font-size: 40px;
 }
 
+header ion-icon:hover {
+  cursor: pointer;
+}
+
 footer{
   bottom: 0;
   box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
@@ -141,8 +145,11 @@ aside{
   width: 100%;
   height: 100%;
   display: flex;
-  position: sticky;
-  z-index: 2;
+  position: fixed;
+  z-index: 23;
+  left: 0;
+  top: 0;
+  overflow: auto;
 }
 
 aside ion-icon{
@@ -182,8 +189,13 @@ aside ion-icon{
   margin-right: 10px;
 }
 
-.user-list div ion-icon:last-child, .user-visibility div ion-icon:last-child{
+.user-list .checked ion-icon:last-child, .user-visibility .checked ion-icon:last-child{
   color: #28BB25;
   position: absolute;
   right: 4%;
 }
+
+.user-list div ion-icon:last-child, .user-visibility div ion-icon:last-child{
+  color: #FFFFFF;
+}
+
