--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,7 @@ header, footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: sticky;
   z-index: 1;
 }
 
@@ -91,12 +91,8 @@ footer ion-icon:hover{
   font-size: 14px;
 }
 
-.hidden{
-  display: none;
-}
-
 main{
-  margin: 100px 0;
+  margin: 10px 0;
   font-size: 14px;
 }
 
@@ -143,13 +139,12 @@ main div{
 
 aside{
   width: 100%;
-  height: 100%;
+  height: 100vh; 
   display: flex;
   position: fixed;
-  z-index: 23;
+  z-index: 2;
   left: 0;
   top: 0;
-  overflow: auto;
 }
 
 aside ion-icon{
@@ -158,19 +153,18 @@ aside ion-icon{
 
 .transparent{
   width: 116px;
-  height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .users-visibility{
   width: 100%;
-  height: 100vh;
   background-color: #FFFFFF;
   color: #000000;
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
   padding: 20px;
+  overflow-y: scroll;
 }
 
 .users-visibility .title{
@@ -179,23 +173,76 @@ aside ion-icon{
   margin-top: 30px;
 }
 
-.user-list div, .user-visibility div{
+.user-chat div, .user-visibility div{
   height: 40px;
   display: flex;
   align-items: center;
 }
 
-.user-list div ion-icon:first-child, .user-visibility div ion-icon:first-child{
-  margin-right: 10px;
+.send{
+  display: flex;
+  justify-content: space-between;
 }
 
-.user-list .checked ion-icon:last-child, .user-visibility .checked ion-icon:last-child{
-  color: #28BB25;
-  position: absolute;
-  right: 4%;
+.send:hover{
+  cursor: pointer;
 }
 
-.user-list div ion-icon:last-child, .user-visibility div ion-icon:last-child{
+aside ion-icon:last-child{
   color: #FFFFFF;
 }
 
+.checked ion-icon:last-child{
+  color: #28BB25;
+  --ionicon-stroke-width: 100px;
+}
+
+.login{
+  width: 100%;
+  height: 100vh;
+  background-color: #FFFFFF;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 3;
+}
+
+.login img{
+  width: 130px;
+  height: 92px;
+  margin: 72px 0;
+}
+
+.login input{
+  width: 261px;
+  height: 54px;
+  margin: 15px 0;
+  border: 1px solid #D7D7D7;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.login button{
+  width: 109px;
+  height: 45px;
+  margin: 15px 0;
+  border: 1px solid #D7D7D7;
+  background-color: #E7E7E7;
+  border: none;
+  border-radius: 9px;
+  color: #696969;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.login div{
+  font-size: 12px;
+  color: #f2cccc;
+}
+
+.hidden{
+  display: none;
+}
