--- a/style/style.css
+++ b/style/style.css
@@ -104,6 +104,7 @@ main div{
   align-items: center;
   flex-wrap: wrap;
   padding: 10px 18px;
+  overflow-x: auto;
 }
 
 .status{
@@ -152,7 +153,7 @@ aside ion-icon{
 }
 
 .transparent{
-  width: 116px;
+  width: 150px;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -163,14 +164,18 @@ aside ion-icon{
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
-  padding: 20px;
+  padding: 0 20px;
+  padding-bottom: 20px;
   overflow-y: scroll;
 }
 
 .users-visibility .title{
   font-weight: 700;
   height: 60px;
-  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .user-chat div, .user-visibility div{
@@ -210,8 +215,6 @@ aside ion-icon:last-child{
   z-index: 3;
 }
 
-
-
 .login img, .loading img{
   width: 130px;
   height: 92px;
@@ -238,6 +241,10 @@ aside ion-icon:last-child{
   color: #696969;
   font-weight: 400;
   font-size: 18px;
+}
+
+.login button:hover{
+  cursor: pointer;
 }
 
 .login div{
